# python-elasticsearch-logging

./: .env  .gitignore  README.md  pyproject.toml
example/: sample.py
src/elasticsearch_logging_handler/: __init__.py  _handlers.py  _queue_handler.py  _sending_handler.py
