[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elasticsearch-logging-handler"
dynamic = ["version"]
description = "Minimalistic Elasticsearch logging handler"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "dinhanhx"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Topic :: System :: Logging",
]
dependencies = [
    "elasticsearch",
    "pytz",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/dinhanhx/python-elasticsearch-logging"

[tool.hatch.version]
path = "src/elasticsearch_logging_handler/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "src/elasticsearch_logging_handler",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.ruff]
line-length = 120
# Flake8 - E, F
# pycodestyle - W
# flake8-builtins - A
# Pylint - PLC, PLE, PLW
# isort - I
select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I']

[tool.ruff.format]
# Like Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
